// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VCarousel.js Render component and match snapshot(s) cycle - false 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js Render component and match snapshot(s) cycle - true 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js Render component and match snapshot(s) icon - list 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js Render component and match snapshot(s) interval - 100 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js Render component and match snapshot(s) interval - hello-world 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js Render component and match snapshot(s) leftControlIcon - false 1`] = `

<div class="carousel">
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js Render component and match snapshot(s) leftControlIcon - hello-world 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="hello icon hello-world">
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js Render component and match snapshot(s) leftControlIcon - true 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          true
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js Render component and match snapshot(s) only defaults 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js Render component and match snapshot(s) rightControlIcon - false 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js Render component and match snapshot(s) rightControlIcon - hello-world 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="hello icon hello-world">
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js Render component and match snapshot(s) rightControlIcon - true 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          true
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js Render component and match snapshot(s) value - 100 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with custom duration between image cycles and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with custom icon and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with custom left control icon and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          stop
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with custom right control icon and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          stop
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with image cycling off and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component with selected active item 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark carousel__controls__item"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          fiber_manual_record
        </i>
      </div>
    </button>
    <button type="button"
            class="btn btn--icon btn--raised theme--dark carousel__controls__item carousel__controls__item--active"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          fiber_manual_record
        </i>
      </div>
    </button>
    <button type="button"
            class="btn btn--icon btn--raised theme--dark carousel__controls__item"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          fiber_manual_record
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__item"
       style="background-image: url(1); display: none;"
  >
  </div>
  <div class="carousel__item tab-transition-enter tab-transition-enter-active"
       style="background-image: url(2);"
  >
  </div>
  <div class="carousel__item"
       style="background-image: url(3); display: none;"
  >
  </div>
</div>

`;

exports[`VCarousel.js should render component without left control icon and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__right">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_right
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;

exports[`VCarousel.js should render component without right control icon and match snapshot 1`] = `

<div class="carousel">
  <div class="carousel__left">
    <button type="button"
            class="btn btn--icon btn--raised theme--dark"
    >
      <div class="btn__content">
        <i class="material-icons icon">
          chevron_left
        </i>
      </div>
    </button>
  </div>
  <div class="carousel__controls">
  </div>
</div>

`;
